Fix regression in the Design Picker, align margins and remove <p> tag when there's no description

--- a/packages/global-styles/src/components/global-styles-variations/style.scss
+++ b/packages/global-styles/src/components/global-styles-variations/style.scss
@@ -40,6 +40,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	margin-left: 3px;
 
 	.global-styles-variations__free-badge {
 		display: none;
